feat: add some cool fix

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flowframe/laravel-trend",
+    "name": "beranidigital/laravel-trend",
     "description": "Easily generate model trends",
     "keywords": [
         "Flowframe",
