--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,12 +7,11 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
-
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [ 8.0, 8.1, '8.2', 8.3' ]
+        php: [ 8.0, 8.1, 8.2, 8.3 ]
         laravel: ['9.*', '10.*', '11.0', ^8.71]
         stability: [prefer-lowest, prefer-stable]
         include:
