--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,8 @@
         "fakerphp/faker": "^1.23",
         "nunomaduro/collision": "^5.3|^6.1|^8.0",
         "orchestra/testbench": "^6.15|^7.0|^8.0|^9.0",
-        "pestphp/pest": "^2.1",
-        "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "pestphp/pest": "^1.18|^2.34",
+        "pestphp/pest-plugin-laravel": "^1.1|^2.3",
         "spatie/laravel-ray": "^1.23",
         "vimeo/psalm": "^4.8|^5.6"
     },
