--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,8 +17,10 @@ jobs:
         include:
           - laravel: 11.*
             testbench: 9.*
+            carbon: 2.*
           - laravel: 9.*
             testbench: 7.*
+            carbon: 1.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
