--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,11 +12,14 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         php: [ 8.3, 8.2 ]
-        laravel: [ 9.*, 11.* ]
+        laravel: [ 10.*, 11.* ]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
             testbench: 9.*
+            carbon: 2.*
+          - laravel: 10.*
+            testbench: 8.*
             carbon: 2.*
           - laravel: 9.*
             testbench: 7.*
